--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
   <version>1.0-SNAPSHOT</version>
   <name>hello-world</name>
 
+<properties>
+		<jdk.version>1.8</jdk.version>
+		<spring.version>5.1.2.RELEASE</spring.version>
+		<junit.version>4.11</junit.version>
+		<log4j.version>1.2.17</log4j.version>
+		<sonar.host.url>http:172.31.27.99:9000/</sonar.host.url>
+		<sonar.login>admin</sonar.login>
+		<sonar.password>admin</sonar.password> 
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -21,6 +33,19 @@
       <version>3.0.2</version>
     </dependency>
   </dependencies>
+
+  <distributionManagement>
+	    <repository>
+	      <id>nexus</id>
+	      <name>Landmark Technologies Releases Nexus Repository</name>
+	      <url>http://172.31.24.1:8081/repository/teslaproject-releases//</url>
+	    </repository>
+	    
+	    <snapshotRepository>
+	      <id>nexus</id>
+	      <name>Landmark Technologies Snapshot Nexus Repository </name>
+	      <url>http://172.31.24.1:8081/repository/teslaproject//</url>
+	    </snapshotRepository>
   
   <build>
     <plugins>
